<resources>
    <string name="app_name" translatable="false">MusicHub</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">" remember-me"</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="set_profile">Set profile image</string>
    <string name="edit_account">Edit my account</string>
    <string name="nickname">Nickname</string>
    <string name="bio">Bio</string>
    <string name="save_change">Save</string>
    <string name="change_pwd">Change password</string>
    <string name="add_album">Add my album</string>
    <string name="privacy">Privacy</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="edit_album">Edit album</string>
    <string name="remove_track">Remove selected track</string>
    <string name="setting">Setting</string>
    <string name="genre">Genre</string>
    <string name="edit_track">Edit track</string>
    <string name="delete_track">Delete track</string>
    <string name="upload_track">Upload track</string>
    <string name="show_more">Show more</string>
    <string name="not_exist">Data doesn\'t exist</string>
    <string name="song_to_list">Song has been added to the list\nIf there is a duplicate, it will not be added</string>
    <string name="comments">Comments</string>
    <string name="song_info">Song info</string>
    <string name="artist_info">Artist info</string>
    <string name="add_to_my_album">Add to my album</string>
    <string name="add_to_list">Add to playlist</string>
    <string name="like">Like</string>
    <string name="hot_music">New tracks</string>
    <string name="playlist">Playlist</string>
    <string name="recent">Recents</string>
    <string name="result">Result</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_alert">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_nickname">Please enter your nickname</string>
    <string name="reset_password">An email has been sent to your email address to reset your password</string>
    <string name="reset_password2">Would you like to change your password?\nSend an email to reset your password</string>
    <string name="update_profile">Your profile has been updated successfully</string>
    <string name="select_image">Please select an image</string>
    <string name="enter_album_title">Please enter the album title</string>
    <string name="delete_selected_track">Selected tracks will be deleted</string>
    <string name="ok">OK</string>
    <string name="check_network">Please connect to the network</string>
    <string name="tap_back_again">Tap back again to exit</string>
    <string name="try_again">Please try again</string>
    <string name="enter_all">Please enter everything</string>
    <string name="repeat_password">Repeat password</string>
    <string name="track_delete">Your track has been deleted</string>
    <string name="track_delete_alert">Are you sure you want to delete that track?</string>
    <string name="update_track">Your track has been updated successfully</string>
    <string name="upload_complete">Upload complete</string>
    <string name="select_track">Please select a track file</string>
    <string name="track">Track</string>
    <string name="album">Album</string>
    <string name="follow">You followed this account</string>
    <string name="unfollow">You unfollowed this account</string>
    <string name="show_less">Show less</string>
    <string name="history">History</string>
    <string name="song_to_playlist">Song has been added to your playlist\nIf there is a duplicate, it will not be added</string>
    <string name="general">General</string>
    <string name="account">Account</string>
    <string name="update_album">Your album has been updated successfully</string>
    <string name="album_delete_alert">Are you sure you want to delete this album?</string>
    <string name="comment_delete">Are you sure you want to delete this comment?</string>
    <string name="sign_up_complete">Your sign up now complete</string>
    <string name="password_6">Password must be at least 6 characters long</string>
    <string name="display_mode">Set display mode</string>
    <string name="light">Light mode</string>
    <string name="dark">Dark mode</string>
    <string name="system">System mode</string>
</resources>