<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">
        <Preference
            android:key="upload"
            android:title="@string/upload_track"/>"/>

        <ListPreference
            android:key="display_mode"
            android:title="@string/display_mode"
            android:entries="@array/display_mode"
            android:entryValues="@array/display_mode_value"
            android:defaultValue="system"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/account">
        <Preference
            android:key="account_edit"
            android:title="@string/edit_account"/>

        <Preference
            android:key="account_logout"
            android:title="@string/sign_out"/>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>