<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_filled_24"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_feed"
        android:enabled="true"
        android:icon="@drawable/baseline_favorite_border_24"
        android:title="@string/feed"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_search"
        android:enabled="true"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_library"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_library_music_24"
        android:title="@string/library"
        app:showAsAction="ifRoom"/>
</menu>