<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AlbumEditActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/edit_album"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="3dp"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/album_edit_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/save_change"
            android:textSize="22sp"
            android:layout_marginEnd="3dp"
            android:textStyle="bold"
            android:textColor="@color/blue_dark" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/relativeLayout2"
        android:layout_above="@+id/album_edit_delete">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_list_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:maxLength="40"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:background="@drawable/edit_text_layout"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/description"
            android:layout_marginStart="20dp" />

        <EditText
            android:id="@+id/edit_list_description"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_layout"
            android:inputType="textMultiLine"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:maxLength="2000"
            android:paddingStart="10dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingEnd="10dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/description_length"
            android:textColor="@color/gray3"
            android:layout_gravity="end"
            android:text="0 / 2000"
            android:textSize="14sp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/privacy"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/edit_set"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@color/white"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <ListView
            android:id="@+id/album_edit_list"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="0px"
            android:divider="@color/black"
            android:choiceMode="multipleChoice"/>

    </LinearLayout>

    <TextView
        android:id="@+id/album_edit_delete"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/blue_dark"
        android:gravity="center"
        android:text="@string/remove_track"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>